--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -42,6 +42,23 @@
             android:textStyle="bold" />
         <!--Title-->
 
+        <!--Pre-test header-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textSize="@dimen/h3"
+                android:layout_marginTop="@dimen/padding4"
+                android:text="\tPre-test"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
         <!--Pretest Unit 1-->
         <LinearLayout
             android:layout_width="match_parent"
@@ -59,7 +76,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="Pretest Unit 1 "
                 android:textSize="@dimen/h2"
                 android:textStyle="bold" />
 
@@ -82,7 +98,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="Pretest Unit 2 "
                 android:textSize="@dimen/h2"
                 android:textStyle="bold" />
 
@@ -105,7 +120,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="Pretest Unit 3 "
                 android:textSize="@dimen/h2"
                 android:textStyle="bold" />
 
@@ -128,7 +142,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="Pretest Unit 4 "
                 android:textSize="@dimen/h2"
                 android:textStyle="bold" />
 
@@ -151,7 +164,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="Pretest Unit 5 "
                 android:textSize="@dimen/h2"
                 android:textStyle="bold" />
 
@@ -174,11 +186,29 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="Pretest Unit 6 "
                 android:textSize="@dimen/h2"
                 android:textStyle="bold" />
 
         </LinearLayout>
+
+        <!--Lesson header-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textSize="@dimen/h3"
+                android:layout_marginTop="@dimen/padding4"
+                android:text="\tLesson"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+
 
         <!--Unit 1-->
         <LinearLayout
@@ -197,7 +227,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="Unit 1 "
                 android:textSize="@dimen/h2"
                 android:textStyle="bold" />
 
@@ -220,7 +249,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="Unit 2 "
                 android:textSize="@dimen/h2"
                 android:textStyle="bold" />
 
@@ -243,7 +271,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="Unit 3 "
                 android:textSize="@dimen/h2"
                 android:textStyle="bold" />
 
@@ -266,7 +293,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="Unit 4 "
                 android:textSize="@dimen/h2"
                 android:textStyle="bold" />
 
@@ -289,7 +315,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="Unit 5 "
                 android:textSize="@dimen/h2"
                 android:textStyle="bold" />
 
@@ -312,7 +337,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:text="Unit 6 "
                 android:textSize="@dimen/h2"
                 android:textStyle="bold" />
 
