--- a/app/src/main/res/layout/fragment_unit1.xml
+++ b/app/src/main/res/layout/fragment_unit1.xml
@@ -2461,29 +2461,36 @@
                 android:textSize="@dimen/h2"
                 android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/padding"
-                android:text="@string/u1styleText173"
-                android:textSize="@dimen/h2"
-                android:textStyle="normal" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/bg_clear3"
+                android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/padding"
-                android:text="@string/u1styleText174"
-                android:textSize="@dimen/h2"
-                android:textStyle="normal" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/padding"
+                    android:text="@string/u1styleText173"
+                    android:textSize="@dimen/h2"
+                    android:textStyle="normal" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/padding"
-                android:text="@string/u1styleText175"
-                android:textSize="@dimen/h2"
-                android:textStyle="normal" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/padding"
+                    android:text="@string/u1styleText174"
+                    android:textSize="@dimen/h2"
+                    android:textStyle="normal" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/padding"
+                    android:text="@string/u1styleText175"
+                    android:textSize="@dimen/h2"
+                    android:textStyle="normal" />
+            </LinearLayout>
 
             <!--1. Multimedia materials with a combination of educational and entertainment context.-->
             <TextView
