--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="padding8">8dp</dimen>
     <dimen name="padding4">4dp</dimen>
     <dimen name="icon">60dp</dimen>
+    <dimen name="h3">18sp</dimen>
 </resources>
