--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -37,7 +37,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Drawer Menu"
+            android:text="Contents"
             android:textSize="@dimen/h1"
             android:textStyle="bold" />
         <!--Title-->
