--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="padding4">4dp</dimen>
     <dimen name="icon">60dp</dimen>
     <dimen name="h3">18sp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
